public/stylesheets/base.css
/* ... */
table.select_commits_from_list tr.commit_row td, tr.selected td {
  padding: 5px 0 5px 0;
  border-bottom: 1px solid #ddd;
}
table.select_commits_from_list tr.selected td {
  background-color: #ffc;
}
table.select_commits_from_list td.merge_to_container {
  width: 40px;
  text-align: center;
}
table.select_commits_from_list tr.commit_row td.selection {
  background: url("../images/silk/brick.png") no-repeat center center;
  width: 40px;
}
table.select_commits_from_list tr.selected td.selection {
  background-image: url("../images/silk/brick_add.png");  
  background-color: #ffc;
}

table.select_commits_from_list tr.commit_row td.commit-details ul {
  margin: 0;
  padding: 0;
}

table.select_commits_from_list tr.commit_row .commit-details ul li {
  margin-right: 5px;
  display: inline;
}
table.select_commits_from_list tr.commit_row .commit-details ul li img {
  display: inline;
}
table.select_commits_from_list tr.commit_row .commit-details.meta {
  width: 180px;
  vertical-align: top;
}
table.select_commits_from_list tr.commit_row .commit-details.message {
  vertical-align: top;
}                                                
table.select_commits_from_list tr.commit_row .commit-details .commit_message {
  margin: 0;
}
table.select_commits_from_list tr.commit_comments .commit-details.body {
 vertical-align: top;
}

table.select_commits_from_list tr.commit_row.with_comments td.meta,
table.select_commits_from_list tr.commit_comments td.meta {
  border-left: 4px solid #888;
  padding-left: 5px;
}
table.select_commits_from_list tr.commit_comments .commit-details .author a {
  font-weight:bold;
}
table.select_commits_from_list tr.commit_comments .commit-details .author a,
table.select_commits_from_list tr.commit_comments .commit-details .permalink a {
  color: #000;
}

#commit_selection_error {
  border: 1px solid red;
  padding: 1em;
}


#repositories #branches {
  float: right;
  margin: 0 10px 10px 10px;
}

.search_time {
  float: right;
}

.search_results strong.highlight {
  background: #ff0;
  font-weight: normal;
}
.search_results strong {
  font-weight: normal;
}

.search_results p, .search_results h3 {
  margin-bottom: 5px;
}

.search_results .item {
  margin-top: 20px;
  padding-bottom: 10px;
  margin-bottom: 10px;
  border-bottom: 1px solid #ddd;
}

.search_bar input {
  padding: 3px;
  margin:0;
}
.search_bar p { margin-bottom: 2px; }
.search_bar { margin-bottom: 20px; }

#users .infobox {
  margin-bottom: 20px;
}

.commits_by_author_graph {
  float: right;
  margin: 40px 0 10px 10px;
}

.commit_graph {
  text-align:center;
}

/* Events */

.events .date {
  background: #999;
  padding: 5px 10px 3px 10px;
  color: #fff;
  text-transform: uppercase;
  font-size: 11px;
}

.events.inline {
  margin-left: 0;
  margin-bottom: 0;
}

.events .event_instances, .events .event_instance {
  margin: 0px 0px 0px 5px;
  background-repeat: no-repeat;
  background-position: 2px 4px;
  padding-bottom: 1px;
  clear: both;
}

.events.inline .event_instance {
  background-image: none !important;
  clear: both;
  margin: 0;
}

.events .event_instances strong, .events .event_instance strong { 
  color: #555; 
}

.events .event_instance .event_date {
  float: left;
  width: 80px;
  text-align: center;
  padding-top: 4px;
  font-size: 11px;
  color: #898989;
}
.events.inline .event_instance .event_date {
  width: 60px;
  padding-right: 10px;
  margin-bottom: 0;
}
.events .event_instance img {
  float: left;
  margin-top: 3px;
}

.events .event_instance .event_meta p { padding: 0; margin: 0;}
.events .event_instance .event_meta {
  margin: 0 100px 20px 105px;
}

.events .event_instance .event_meta .meta_body, .comments .comment .meta_body {
    font-size: 12px;
}
.events .event_instance .event_meta .meta_body span.changed, 
.comments .comment .meta_body span.changed {
    background: #E0EFCF;
    padding: 1px 2px 1px 2px;
}

.events.inline .event_instance .event_meta {
  margin: 0 0px 20px 95px;
  text-align: left;
}

.events.inline .event_instance .event_meta * > p {
  text-align: left;
}

.events .event_instance .event_category {
  float: right;
  min-width: 100px;
  text-align: center;
  padding: 2px 5px 0 5px;
  font-size: 11px;
  text-transform: uppercase;
  color: #fff;
  background: #b6babc;
}

.events.inline .event_instance .event_category {
  width: 0;
  display: none;
  margin: 0;
  padding: 0;
}

li.event_instance.create_project { background-image: url("../images/silk/report_add.png"); }
li.event_instance.delete_project { background-image: url("../images/silk/report_delete.png"); }
li.event_instance.update_project { background-image: url("../images/silk/report_edit.png"); }
li.event_instance.create_repository { background-image: url("../images/silk/database_add.png"); }
li.event_instance.clone_repository { background-image: url("../images/silk/database_clone.png"); }
li.event_instance.delete_repository { background-image: url("../images/silk/database_delete.png"); }
li.event_instance.update_repository { background-image: url("../images/silk/database_edit.png"); }
li.event_instance.commit { background-image: url("../images/silk/brick.png"); }
li.event_instance.create_branch { background-image: url("../images/silk/arrow_branch.png"); }
li.event_instance.delete_branch { background-image: url("../images/silk/delete.png"); }
li.event_instance.create_tag { background-image: url("../images/silk/tag_blue_add.png"); }
li.event_instance.delete_tag { background-image: url("../images/silk/tag_blue_delete.png"); }
li.event_instance.add_committer { background-image: url("../images/silk/group_add.png"); }
li.event_instance.remove_committer { background-image: url("../images/silk/group_delete.png"); }
li.event_instance.comment { background-image: url("../images/silk/comment.png"); }
li.event_instance.request_merge { background-image: url("../images/silk/chart_line_add.png"); }
li.event_instance.resolve_merge_request { background-image: url("../images/silk/arrow_merge.png"); }
/* ... */

